      `seqApply()`)

    o reduce the overhead in `seqSetFilter(, variant.sel=...)`

NEW FEATURES

    o `seqGDS2VCF()` outputs a bgzip vcf file with tabix indexing

    o two more options "Ultra" and "UltraMax" in `seqStorageOption()`

    o '@chrom_rle_val' and '@chrom_rle_len' are added to a GDS file for
      faster chromosome indexing


CHANGES IN VERSION 1.18.1-1.18.2
-------------------------

BUG FIXES

    o fix an issue: `seqSetFilterChrom()` extends a genomic range
      upstream and downstream 1bp

    o use `.onLoad()` instead of `.onAttach()` to fix
      https://support.bioconductor.org/p/104405/#104443


CHANGES IN VERSION 1.18.0
-------------------------

NEW FEATURES

    o progress information: showing overall running time when completed

    o new variable names "$ref" and "$alt" can be used in `seqGetData()` and
      `seqBlockApply()`

    o new argument '.progress' in `seqDigest()`

    o new argument 'ref.allele' in `seqAlleleCount()`

    o new variable name "$chrom_pos_allele" can be used in `seqGetData()` and
      `seqBlockApply()`

UTILITIES

    o move VariantAnnotation to the suggest field from the import field

    o remove an unused argument '.list_dup' in `seqBlockApply()`

    o slightly improve the computational efficiency of `seqAlleleFreq()` and
      `seqAlleleCount()` when 'ref.allele=0'

    o `seqGetData(f, "$chrom_pos")` outputs characters with the format
      'chromosome:position' instead of 'chromosome_position'

BUG FIXES

    o fix the unexpected behaviors in `seqSetFilter(, action="push")` and
      `seqSetFilter(, action="push+intersect")`

    o fix a bug in `seqGetData(f, "$dosage")` when the number of unique alleles
      at a site greater than 3 (https://github.com/zhengxwen/SeqArray/issues/21)

    o fix a bug in `seqSNP2GDS()` for inverted genotypes during importing data
      from SNP GDS files (https://github.com/zhengxwen/SeqArray/issues/22)

    o fix an issue of no phase data in `seqExport()`

